# project-manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  mkdocs.yml  pyproject.toml
ProjectManager/: asgi.py  settings.py  urls.py  wsgi.py
apps/core/: apps.py  mixins.py  models.py  urls.py  utils.py  views.py
apps/core/migrations/: 0001_initial.py  0002_delete_tag.py  0003_initial.py
apps/core/static/assets/css/: theme-rtl.min.css  theme.min.css
apps/core/static/assets/fonts/material/: style.css
apps/core/static/assets/fonts/roboto/: style.css
apps/core/static/assets/fonts/roboto_mono/: style.css
apps/core/static/js/: customizer.js
apps/core/static/js/datatables/: datatables-simple-demo.js
apps/core/static/vendors/dhtmlx-gantt/: dhtmlxgantt.css  dhtmlxgantt.js
apps/core/static/vendors/leaflet/: leaflet.css
apps/core/static/vendors/leaflet.tilelayer.colorfilter/: leaflet-tilelayer-colorfilter.min.js
apps/core/static/vendors/rater-js/: index.js
apps/core/templates/core/: base.html
apps/core/templates/core/components/: dashboard_filter.html  list_header.html  messages.html  messages_form.html  model_confirm_delete.html  model_form.html
apps/core/templates/core/crud/: delete.html  detail.html  form.html  list.html
apps/core/templates/core/layout/: footer.html  nav.html  side_menu.html
apps/core/templatetags/: core.py
apps/project/: models.py  urls.py  views.py
apps/project/configs/: client.yaml  project.yaml  task.yaml
apps/project/migrations/: 0001_initial.py  0002_remove_project_status_alter_project_assigned_to.py  0003_alter_task_status.py
apps/project/tests/: project_test.py
apps/project/views/: client.py  project.py  task.py
docs/: client_views.md  models.md  project_views.md  task_views.md
