[tool.poetry]
name = "projectmanager"
version = "0.1.0"
description = "Minimal Project Manager"
authors = ["Marcus <marcus.santos@bycoders.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = "^7.5.1"
pre-commit = "^3.7.1"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
