[tool.poetry]
name = "projectmanager"
version = "0.1.0"
description = "Minimal Project Manager"
authors = ["Marcus <marcus.santos@bycoders.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-widget-tweaks = "^1.5.0"
pyyaml = "^6.0.1"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = "^7.5.1"
pre-commit = "^3.7.1"
pylint = "^3.2.2"
model-bakery = "^1.18.0"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^1.0.1"
mkdocs-material = "^9.5.17"
mkdocs-material-extensions = "^1.3.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-print-site-plugin = "^2.3.6"
mkdocs-with-pdf = "^0.9.3"
mkdocstrings = "^0.24.3"
mkdocstrings-crystal = "^0.3.7"
mkdocstrings-python = "^1.9.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
